# Cortex-Cloud

./: .dockerignore  .env.example  .gitignore  DESIGN.md  README.md
.github/workflows/: ci.yml  deploy.yml
core/plugins/: README.md
core/scripts/: backfill_session_stats.py  classify_backlog.py  deploy.sh  deterministic_loop.py  (+17 more)
cortex_gateway/: __init__.py  __main__.py  app.py  auth.py  config.py  connectors.py  corpus_service.py  grants.py  monitor.py  oauth.py  ratelimit.py  sensitivity.py
deploy/: Dockerfile  build-image.sh  cloudflared-config.yml  containerapp.tmpl.yaml  deploy.sh  entra-setup.sh  litestream-replicate.sh  litestream-restore.sh  litestream.yml  roll.py  tick-job.sh
docs/: CONNECTOR_GRANTS_DESIGN.md  MCP_OAUTH_AZURE_ENTRA_SETUP.md  OAUTH_2_1.md  PHONE_APP_INTEGRATION.md  VISION.md
gateway/: DESIGN.md  pyproject.toml  requirements.txt
gateway/cortex_gateway/: app.py  config.py  core_client.py  corpus_service.py  corpus_writes.py  db.py  grants.py  identity.py  mcp_server.py  oauth.py  pillars_service.py  search_maps.py  tokens_cli.py
gateway/cortex_gateway/rest/: __init__.py  core_proxy.py  hub_api.py  intro_page.py  ops.py  sync.py
gateway/scripts/: seed_demo_data.py
gateway/systemd/: cortex-gateway.service
gateway/tests/: test_connections_web.py  test_connector_grants.py  test_core_proxy.py  test_hub_api.py  test_mcp_discovery.py  test_oauth.py  test_pillars.py
scripts/: monitor_pulls.py
tests/: conftest.py  test_connector_grants.py  test_hub_api.py  test_mcp_discovery.py  test_oauth.py  test_sensitivity_gating.py
(+104 files in other folders)
